# cs2_lazydumper

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  schema.py  schema.pyi  typehint_builder.py
dumper/: cs2_struct.py  cstruct.py  dump.py
src/cs2_lazydumper/: schema.py
src/cs2_lazydumper/dumper/: cs2_struct.py  cstruct.py  dump.py
test/: pyi_builder.py
