[build-system]
    requires = [
        "setuptools>=61.0",
        "wheel>=0.37.0"
    ]
    build-backend = "setuptools.build_meta"

[project]
    name = "cs2_lazydumper"
    version = "0.0.1"
    requires-python = ">=3.12"
    dependencies = [
        "xxhash",
        "ak_memkit @ git+https://github.com/AK-0x7FFF/ak_memkit.git"
    ]

